feat: 일괄 배치 앤드 포인트 개발